Changes
=======

1.3 (unreleased)
----------------

- Moved install requirement `fanstatic` to an extra requirement.


1.2 (2012-02-15)
----------------

- Provided a library to be able to use the zc.datetimewidget resources with
  fanstatic.


1.1 (2011-02-18)
----------------

- changed external to use resources of zc.datetimewidget 0.6.4, which
  contains a fix for IE in calendar.js


1.0 (2009-05-20)
----------------

- initial revision